CO-4 AT-1 level2
============================================================================================
Student #25 | DHANUSHYA R B | 192565033HC
============================================================================================
[1] QID: 47
Question : Write a program to read a character until a * is encountered. Also count the numb
er of uppercase, lowercase, and numbers entered by the users.
Sample Input:
Enter * to exit
Enter any character: W
Enter any character: d
Enter any character: A
Enter any character: G
Enter any character: g
Enter any character: H
Enter any character: *
Sample Output:
Total count of lower case:2
Total count of upper case:4
Total count of numbers =0
Testcases: 1. 1,7,6,9,5
2. S, Q, l, K,7, j, M
3. M, j, L, &, @, G
4. D, K, I, 6, L, *
5. *, K, A, e, 1, 8, %, *
Program : import java.io.*;
import java.util.*;
class Star
{
public static void main(String args[])
{
char []a=new char[7];
Scanner s=new Scanner(System.in);
for(int i=0;i
Input : W
d
A
G
g
H
*
Output : Error: Star.java:28: error: bad operand types for binary operator ’-’
System.out.println("DIGITS= "+c_n-6);
^
first type: String
second type: int
1 error
First Save: 2026-06-23 15:31:04
Last Save : 2026-06-23 16:24:06
----------------------------------------------------------------------------------------
[2] QID: 41
Question : In an organization they decide to give bonus to all the employees on New Year. A
5% bonus on salary is given to the grade A workers and 10% bonus on salary to the

Submitted Answers Report
grade B workers. Write a program to enter the salary and grade of the employee.
If the salary of the employee is less than $10,000 then the employee gets an extr
a 2% bonus on salary Calculate the bonus that has to be given to the employee and
print the salary that the employee will get.
Sample Input & Output:
Enter the grade of the employee: B
Enter the employee salary: 50000
Salary=50000
Bonus=5000.0
Total to be paid:55000.0
Testcases: 1. Enter the grade of the employee: A
Enter the employee salary: 8000
2. Enter the grade of the employee: C
Enter the employee salary: 60000
3. Enter the grade of the employee: B
Enter the employee salary: 0
4. Enter the grade of the employee: 38000
Enter the employee salary: A
Program : import java.io.*;
import java.util.*;
class Employee
{
public static void main(String args[])
{
char grade;
long salary;
double bonus;
Scanner s=new Scanner(System.in);
grade=s.next().charAt(0);
salary=s.nextLong();
if(grade==’A’)
{
bonus=salary*0.05;
System.out.println("SALARY= "+salary);
System.out.println("BONUS= "+bonus);
System.out.println("TOTAL TO BE PAID= "+(salary+bonus));
}
else if(grade==’B’)
{
bonus=salary*0.10;
System.out.println("SALARY= "+salary);
System.out.println("BONUS= "+bonus);
System.out.println("TOTAL TO BE PAID= "+(salary+bonus));
}
else
{
System.out.print("INVALID GRADE");
}
if(salary
Input : B
50000
Output : SALARY= 50000
BONUS= 5000.0
TOTAL TO BE PAID= 55000.0

First Save: 2026-06-23 15:24:20
Last Save : 2026-06-23 15:52:17

Submitted Answers Report
----------------------------------------------------------------------------------------
[3] QID: 37
Question : Find the Mth maximum number and Nth minimum number in an array and then find the
sum of it and difference of it.
Sample Input:
Array of elements = {14, 16, 87, 36, 25, 89, 34}
M = 1
N = 3
Sample Output:
1stMaximum Number = 89
3rdMinimum Number = 25
Sum = 114
Difference = 64
Testcases:
1. {16, 16, 16 16, 16}, M = 0, N = 1
2. {0, 0, 0, 0}, M = 1, N = 2
3. {-12, -78, -35, -42, -85}, M = 3 , N = 3
4. {15, 19, 34, 56, 12}, M = 6 , N = 3
5. {85, 45, 65, 75, 95}, M = 5 , N = 7
Program : import java.io.*;
import java.util.*;
class MaxMin
{
public static void main(String args[])
{
int []a=new int[8];
Scanner s=new Scanner(System.in);
for(int i=0;i
Input : 14 16 87 36 25 89 34
1
3

Output : 14
16
25
34
36
87
89
Mth MAX= 89
Nth MIN= 25

First Save: 2026-06-23 14:50:24
Last Save : 2026-06-23 15:50:02
----------------------------------------------------------------------------------------
[4] QID: 36
Question : Write a program to count all the prime and composite numbers entered by the user.
Sample Input:
Enter the numbers
4
54
29
71
7
59

Submitted Answers Report
98
23
Sample Output:
Composite number:3
Prime number:5
Testcases:
1. 33, 41, 52, 61,73,90
2. TEN, FIFTY, SIXTY-ONE, SEVENTY-SEVEN, NINE
3. 45, 87, 09, 5.0 ,2.3, 0.4
4. -54, -76, -97, -23, -33, -98
5. 45, 73, 00, 50, 67, 44

Program : import java.io.*;
import java.util.*;
class PrimeCompo
{
public static void main(String args[])
{
int[]a=new int[10];
Scanner s=new Scanner(System.in);
for(int i=0;i
Input : 4
54
29
71
7
59
98
23
Output : 3
5

First Save: 2026-06-23 14:44:33
Last Save : 2026-06-23 15:59:15
